[package]
name = "memory-allocator-performance-rs"
version = "0.1.0"
edition = "2021"
autobenches = false

[workspace]
members = ["alloc_fmt"]
resolver = "2"


[dependencies]
bumpalo = { version = "3.16.0", features = ["allocator_api"] }
jemallocator = "0.5.4"
libc = "0.2.159"
mimalloc = "0.1.43"
alloc_fmt = { path = "alloc_fmt" }

[dev-dependencies]
criterion = { version = "2.7.2", package = "codspeed-criterion-compat", features = [
    "html_reports",
] }
nalgebra = "0.33.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.10.0"
shred = "0.16.1"
specs = "0.20.0"

[[bench]]
name = "various_sizes"
harness = false

[[bench]]
name = "glibc_malloc"
harness = false

[[bench]]
name = "malloc_large"
harness = false


[[bench]]
name = "stress_mem"
harness = false

[[bench]]
name = "specs"
path = "benches/specs/main.rs"
harness = false
